Hardcoded protocols removed.

--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -27,7 +27,7 @@
             {{- .PageContext.ShortName}} {{.PageContext.ODName -}}
           </a>: Listen Again
         </h2>
-        <iframe width="100%" height="120" src="https://www.mixcloud.com/widget/iframe/?feed={{.PageData.Timeslot.MixcloudStatus}}&hide_cover=1&light=1" frameborder="0"></iframe>
+        <iframe width="100%" height="120" src="//www.mixcloud.com/widget/iframe/?feed={{.PageData.Timeslot.MixcloudStatus}}&hide_cover=1&light=1" frameborder="0"></iframe>
         <a href="/ontap/" title="Goto {{.PageContext.ShortName}} {{.PageContext.ODName}}">Listen to more shows on demand...</a>
       </div>
     </div>
