--- a/sass/base/_backgrounds.scss
+++ b/sass/base/_backgrounds.scss
@@ -2,11 +2,22 @@
   background: $off-white-color;
 }
 
-.bg-primary, .bg-secondary, .bg-third {
-  color: #fff;
+.bg-primary,
+.bg-secondary,
+.bg-third {
+  color: $white;
 
   a {
-    color: #6Af;
+    color: $link-blue;
+  }
+}
+
+.bg-off-white,
+.bg-white {
+  color: $black;
+
+  a {
+    color: $link-blue;
   }
 }
 
