add default background for show images
fixes: #137

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -378,6 +378,7 @@ footer {
 
 .show-img {
   border: #e1e1e1 7px solid;
+  background-color: $primary-color;
 
   @include media-breakpoint-up(md) {
     margin-top: -3em;
