--- a/views/contact.tmpl
+++ b/views/contact.tmpl
@@ -66,8 +66,8 @@
       <div class="col-md-6 col-lg-3">
         <div class="card bg-transparent p-3">
           <div class="card-block">
-            <h5 class="card-title">Management </h5>
-            <p><a href="mailto:ury@ury.org.uk" title="Email Management">ury<br>@ury.org.uk</a></p>
+            <h5 class="card-title">Management</h5>
+            <p><a href="mailto:management@ury.org.uk" title="Email Management">management<br>@ury.org.uk</a></p>
             <p class="card-text">These are people who are responsible for the day to day running of the station and ensure the key aims of the station are met in terms of output, revenue and audience.</p>
           </div>
         </div>
