--- a/views/signedup.tmpl
+++ b/views/signedup.tmpl
@@ -56,7 +56,7 @@
           <img src="/images/slack-logo-white.png" class="img-fluid mx-auto d-block" alt="Slack Logo">
         </div>
         <p></p>
-        <p class="text-center">Find the URY slack team at <a href="http://ury.slack.com">ury.slack.com</a> and join all the channels you're interested in.</p>
+        <p class="text-center">Find the URY Slack team at <a href="http://ury.slack.com">ury.slack.com</a> and join all the channels you're interested in.</p>
         <br>
       </div>
 
