--- a/views/podcast_player.tmpl
+++ b/views/podcast_player.tmpl
@@ -53,9 +53,13 @@
             {{url "/images/podcast.png"}}
       {{- end -}}
     " class="album-art"/>
+    <div class="branding">
+      URY On Tap<br>
+      <span>Podcast</span>
+    </div>
     <div class="meta-container">
       <div class="song-title">{{.Podcast.Title}}</div>
-      <div class="song-artist">URY On Tap Podcast</div>
+
     </div>
     <div class="podcast-description">
       {{- html .Podcast.Description -}}
