--- a/views/podcast_player.tmpl
+++ b/views/podcast_player.tmpl
@@ -58,8 +58,7 @@
       <span>Podcast</span>
     </div>
     <div class="meta-container">
-      <div class="song-title">{{.Podcast.Title}}</div>
-
+      <div class="podcast-title">{{.Podcast.Title}}</div>
     </div>
     <div class="podcast-description">
       {{- html .Podcast.Description -}}
