Remove old player code

--- a/views/podcast_player.tmpl
+++ b/views/podcast_player.tmpl
@@ -3,9 +3,7 @@
 {{define "header-block"}}<!-- header -->{{end}}
 {{define "footer-block"}}<!-- footer -->{{end}}
 
-{{define "content"}}{{template "podcast_player" .}}{{end}}
-
-{{define "podcast_player"}}
+{{define "content"}}
 
 {{with .PageData}}
   <div class="player">
