Add Social Media and Embed

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -214,6 +214,10 @@ footer {
   width: 500px;
   max-width: 100%;
 }
+.uryplayer-podcast-code {
+  height: 70px;
+  width: 100%;
+}
 
 .page404 {
   text-align: center;
