update font awesome version

--- a/views/timeslot.tmpl
+++ b/views/timeslot.tmpl
@@ -80,7 +80,7 @@
               {{end}}
               data-description="I'm listening to {{.PageData.Timeslot.Title}} ({{.PageData.Timeslot.StartTime.Format "Monday, _2 Jan 2006 - 15:04"}})"
               data-via="{{.PageContext.MainTwitter}}"
-              class="prettySocial fa fa-twitter">
+              class="prettySocial fab fa-twitter">
             </a>
 
             <a href="#"
@@ -91,7 +91,7 @@
               {{if .PageData.Timeslot.Season.ShowMeta.Photo}}
                 data-media="{{.PageContext.FullURL}}{{.PageData.Timeslot.Season.ShowMeta.Photo}}"
               {{end}}
-              class="prettySocial fa fa-facebook">
+              class="prettySocial fab fa-facebook">
             </a>
 
             <a href="#"
@@ -101,7 +101,7 @@
               {{if .PageData.Timeslot.Season.ShowMeta.Photo}}
                 data-media="{{.PageContext.FullURL}}{{.PageData.Timeslot.Season.ShowMeta.Photo}}"
               {{end}}
-              class="prettySocial fa fa-google">
+              class="prettySocial fab fa-google">
             </a>
 
           </div>
