--- a/views/partials/base.tmpl
+++ b/views/partials/base.tmpl
@@ -35,7 +35,7 @@
 
     <link rel="stylesheet" href="{{url "/css/main.scss.css"}}" type="text/css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway:400,500|Roboto:300,400,500">
-    <script src="https://use.fontawesome.com/577e6fdb00.js"></script>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 </head>
 <body>
 {{block "header-block" .}}
