--- a/sass/elements/_schedule.scss
+++ b/sass/elements/_schedule.scss
@@ -2,6 +2,16 @@ $white: #ffffff;
 $black: #000000;
 $shadow: rgba(0, 0, 0, 0.5);
 
+
+.schedule-key-icon {
+  font-size: 0.6em;
+  opacity: 0.5;
+
+  &:hover {
+    opacity: 1;
+  }
+}
+
 @mixin schedule-block($bg-color, $txt-color) {
   border-bottom: $bg-color solid 10px;
   background: $white;
