--- a/sass/elements/_schedule.scss
+++ b/sass/elements/_schedule.scss
@@ -5,6 +5,8 @@ $shadow: rgba(0, 0, 0, 0.5);
 
 .schedule-key-icon {
   font-size: 0.6em;
+  color: $black;
+  text-decoration: none !important; // scss-lint:disable ImportantRule
   opacity: 0.5;
 
   &:hover {
